# ChatApp

./: CMakeLists.txt
ChatClient/: CMakeLists.txt  main.cpp
ChatNetworking/: CMakeLists.txt
ChatNetworking/include/ChatNetworking/: Base.h  TCPServer.h  TcpConnection.h
ChatNetworking/include/ChatNetworking/client/: TcpClient.h
ChatNetworking/include/ChatNetworking/server/: TCPServer.h  TcpChatRoom.h  TcpConnection.h
ChatNetworking/src/: Base.cpp  TCPServer.cpp  TcpConnection.cpp
ChatNetworking/src/client/: TcpClient.cpp
ChatNetworking/src/server/: TCPServer.cpp  TcpChatRoom.cpp  TcpConnection.cpp
ChatServer/: CMakeLists.txt  main.cpp
